[package]
name = "pg_cardano"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_cardano"
path = "./src/bin/pgrx_embed.rs"

[features]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg_test = []

[dependencies]
bs58 = "0.5.1"
bech32 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
blake2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
pgrx = { version = "0.12", features = ["pg13"] }
hex = "0.4.3"

[dev-dependencies]
pgrx-tests = "=0.12.5"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
