[package]
name = "pg_cardano"
version = "1.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_cardano"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg12"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
bs58 = "0.5.1"
bech32 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"] }
blake2 = "0.10"
ed25519-dalek = "2.1"
pgrx = { version = "0.12"}
hex = "0.4.3"
ciborium = "0.2.2"

[dev-dependencies]
pgrx-tests = "=0.12"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
