[package]
name = "pg_cardano"
version = "1.2.0"
edition = "2024"
resolver = "3"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_cardano"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
bs58 = "0.5.1"
bech32 = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"] }
blake2 = "0.10"
ed25519-dalek = "2.2"
pgrx = { version = "0.17.0"}
hex = "0.4.3"
ciborium = "0.2.2"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
